--- a/merge.html
+++ b/merge.html
@@ -20,16 +20,16 @@
          </thead>
     <tbody>
         <tr>
-        <td>Male</td>
-        <td>1.9</td>
-        <td>0.2</td>
-        <td>40%</td>
+            <td>Male</t>
+            <td>1.9</td>
+            <td>0.2</td>
+            <td>40%</td>
         </tr>
         <tr>
-        <td>Female</td>
-        <td>1.9</td>
-        <td>0.2</td>
-        <td>40%</td>
+            <td>Female</td>
+            <td>1.9</td>
+            <td>0.2</td>
+            <td>40%</td>
         </tr>
         
     </tbody>
